# qr-generator

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
