[package]
name = "qr-generator"
version = "0.1.2"
authors = ["Adiatma Kamarudin <adiatma.kamaarudin@ralali.com>"]
edition = "2018"
license = "MIT"
description = "QrCode generator with rust"
repository = "https://github.com/adiatma/qr-generator.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.11.0"
image = "0.22.3"
